<resources>
    <string name="app_name">Kandang Ayam Bojongsoang</string>
    <string name="_4_8">4.8</string>
    <string name="buah">Buah</string>
    <string name="restoran_pilihan">Restoran Pilihan</string>
    <string name="rujak">rujak</string>
    <string name="harga">Rp. 7000</string>
    <string name="diskon">Extra diskon 35% pakai OVO - PALUGADA</string>
    <string name="jaraktempat">1.2</string>
    <string name="Restoran">Kandang Rujak -  Cimahi</string>
</resources>
